--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "employee_directory",
   "version": "0.1.0",
-  "homepage": "https://tjfitz.github.io/",
+  "homepage": "https://tjfitz.github.io/React_Employee_Directory/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
