--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "employee_directory",
   "version": "0.1.0",
-  "homepage": "https://tjfitz.github.io/",
+  "homepage": "https://tjfitz.github.io/React_Employee_Directory/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
